# ml-exploration

./: .gitignore  README.md  pyproject.toml  requirements.txt
cve_engine_lambda/: pyproject.toml
cve_engine_lambda/src/cve_engine/: cvss.py  cvss_data.py  data_processing.py  engine.py  entry.py
cve_engine_lambda/src/cve_engine/training/: bench.py
docs/: lecture_quiz.ods
notebooks/: autogluon.ipynb  ce_benchmarking.ipynb  cve_engine.ipynb  embeddings.ipynb  logistic_regression_techniques.ipynb  mnist.ipynb  nn-from-scratch.ipynb  perceptron_demo.ipynb  sklearn_text_preprocessing.ipynb  statistics.ipynb
src/: ml.py  perceptron_demo.py
src/k_nearest_neighbors/: knn.py
src/law_large_numbers/: lln.py
src/linear_classifiers/: data_generator.py  entry.py  knn.py  linear_classifier.py  multinomial_linear_classifier.py  naive_bayes.py
src/mltools/: constants.py
src/mltools/cli/: cli.py
src/mltools/modules/k_nearest_neighbors/: knn.py
src/mltools/modules/law_large_numbers/: lln.py
src/mltools/modules/linear_classifiers/: __init__.py  data_generator.py  entry.py  knn.py  multinomial_linear_classifier.py  naive_bayes.py
src/mltools/modules/neural_networks/: mnist.ipynb
src/mltools/modules/perceptron/: perceptron.py  perceptron_demo.py
src/mltools/modules/transformers/: __init__.py  entry.py
src/mltools/utils/data/: data_load.py
src/mltools/utils/formatting/: colors.py  std.py
src/mltools/utils/math/: neural_networks.py  statistics.py  vectors.py
src/perceptron/: demo.ipynb  perceptron.py  perceptron_demo.py
src/transformers/: entry.py
src/utils/: helpers.py  math.py  printing.py
src/utils/math/: distance.py  statistics.py  vectors.py
tests/: test_cli.py  test_mltools.py
tests/utils/math/: test_nn_utils.py
