[project]
name = "ml-exploration"
authors = [{name = "Brendan Schlaman", email = "brendan.schlaman@gmail.com"}]
requires-python = ">=3.9"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    "colorama",
    "prettytable",
    "torch",
    "numpy",
    "pandas",
    "bpyutils @ git+https://github.com/bschlaman/bpy-utils.git",
    "scipy",
    "jupyter",
    "scikit-learn",
    "statsmodels",
    "python-dotenv",
    "matplotlib",
    "seaborn",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = ["pytest", "black", "isort", "flake8", "ipython"]

[tool.pyright]
include = ["src"]
pythonPlatform = "Linux"

[project.scripts]
mltools = "mltools.cli.cli:main"
