[project]
name = "cve-engine"
authors = [{name = "Brendan Schlaman", email = "brendan.schlaman@gmail.com"}]
requires-python = ">=3.9"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    "bpyutils @ git+https://github.com/bschlaman/bpy-utils.git",
    "cvss",
    "tensorboard",
    "scikit-learn",
    "torch",
    "numpy",
    "nltk",
    "prettytable",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = ["pytest", "black", "isort", "flake8", "ipython"]

[tool.pyright]
include = ["src"]
pythonPlatform = "Linux"

[tool.poetry]
name = "cve-engine"
version = "0.1.0"
description = ""
authors = ["Brendan Schlaman <brendan.schlaman@gmail.com>"]
readme = "README.md"
